correct router issue
Product Details now opens up on clicking on the Item.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="//assets.adobedtm.com/a49994c1c918/fbc14da1783f/launch-9125d51760b5-staging.min.js" async></script>
     <title>React Demo App</title>
   </head>
   <body>
