--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,21 @@
       var digitalData = digitalData || {};
         digitalData = {
           page: {
-            pageName: "Main page",
+            pageName: "",
             siteSection: "",
             siteSubsection: "",
             server: "India Server"
           },
           customer: {
             loginStatus: "",
+          },
+          cart:{
+            //addToCart is used to check if the item is added to the cart.
+            //productName is to check what item is added to the cart.
+            addToCart: "",
+            productName: "",
+            itemsInCart: "",
+            totalRevenue: ""
           },
         };
     </script>
