add functionality to track cart change
Tracking any changes in number of items in the Cart subpage.

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,15 @@
             //productName is to check what item is added to the cart.
             addToCart: "",
             productName: "",
-            itemsInCart: "",
-            totalRevenue: ""
+            itemsInCart: [],
+            totalRevenue: "",
+            changed: {
+              //Contains Elements which are just changed in the Cart page.
+              //productName contains the item name
+              //newCount contains the new count
+              productName: "",
+              newCount: "",
+            },
           },
         };
     </script>
